crates/polychem/src/polymers/snapshots/polychem__polymers__polymer__tests__modify_group-5.snap
---
source: crates/polychem/src/polymers/polymer.rs
description: nonexistent_modification
expression: out
---
  × the modification "Arg" could not be found in the supplied polymer database
