crates/polychem/src/polymers/snapshots/polychem__polymers__polymer__tests__modify_groups.snap
---
source: crates/polychem/src/polymers/polymer.rs
description: modify_non_free_group
expression: out
---
  × failed to apply Calcium Adduct modification to residue 0 (N-Acetylmuramic
  │ Acid)
  ╰─▶   × the functional group "Hydroxyl" at="6-Position" of residue 0 was
        │ already modified, but must be free
