crates/polychem/src/polymers/snapshots/polychem__polymers__polymer__tests__modify_only_group-2.snap
---
source: crates/polychem/src/polymers/polymer.rs
description: residue_not_in_polymer
expression: out
---
  × residue 1 could not be found in the current polymer
  help: this residue may belong to another polymer, or may have been
        previously deleted from this one
